--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
   </head>
   <body>
 
+  <!-- new request modal -->
+  <div class="new-request">
+    <div class="modal">
+      <h2>Request a Tutorial</h2>
+      <form>
+        <input type="text" name="request" placeholder="Request...">
+        <button>Submit Request</button>
+        <p class="error"></p>
+      </form>
+    </div>
+  </div>
+
   <header>
     <nav>
       <a class="add-request">add request</a>
@@ -39,5 +51,7 @@
 
   <!-- Initialize Firebase -->
   <script src="/__/firebase/init.js"></script>
+
+  <script src="js/app.js"></script>
   </body>
 </html>
