--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
         </div>
       </li>
     </ul>
+    <button class="call">Say Hello</button>
   </section>
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -51,6 +52,7 @@
 
   <!-- Initialize Firebase -->
   <script src="/__/firebase/init.js"></script>
+<!--  <script src="'/__/firebase/init.js?useEmulator=true'"></script>-->
 
   <script src="js/app.js"></script>
   </body>
